# study-code

./: challenge.cpp  requirements.md  status.md
.github/: CODEOWNERS
courses/coding-in-C/: c_coding_conventions_for_embedded_systems.md
courses/coding-in-C++/: cpp_coding_conventions.md
courses/coding-in-C++/Lab_1/: Lab_1.md
courses/coding-in-C++/Lab_1/MySolution/: HelloWorld.c
courses/coding-in-C++/Lab_1/mySolution/: AgeValidator.cpp  CMakeLists.txt  HelloWorld.cpp
courses/coding-in-C++/Lab_1/mySolution/grading_project/include/: report_utils.hpp
courses/coding-in-C++/Lab_1/mySolution/grading_project/src/: report_utils.cpp
courses/coding-in-C++/Lab_2/: Lab_2.md
courses/coding-in-C++/Lab_2/mySolution/: Section2.2.cpp  Section2.6.drawio  bankAccount.cpp
courses/coding-in-C++/Lab_2/solution/: Lab2_UML_Cinema.drawio
courses/coding-in-C++/Lab_3/: Lab_3.md
courses/coding-in-C++/Lab_3/mySolution/: UML Lab3.drawio
courses/coding-in-C++/Lab_4/: Lab_4.md
courses/coding-in-C++/Lab_5/mySolution/: drone_test_bench.cpp  drone_test_bench.hpp
courses/coding-in-C++/Lab_5/solution/: drone_test_bench.cpp
courses/coding-in-C++/Lab_6/mySolution/: bugHunt_assistance_system.cpp  bugHunt_assistance_system.hpp  bugHunt_main.cpp  (+2 more)
courses/coding-in-C/Lab_6/: Lab_6.md
courses/coding-in-VB/Lab_1/: Lab_1.md
study-code/courses/coding-in-C++/: cpp_coding_conventions.md
study/Campus-Terminal/: campus_terminal_main.cpp  campus_terminal_tools.cpp  campus_terminal_tools.hpp
study/Sensor-Calibration/: sensor_main.cpp  sensor_tools.cpp  sensor_tools.hpp
(+44 files in other folders)
